--- a/Develop/server/.env
+++ b/Develop/server/.env
@@ -1,4 +1,6 @@
-DB_NAME='kanban_db'
-DB_USER='zdonels'
-DB_PASSWORD='password'
-JWT_SECRET_KEY='password'
+DB_HOST=dpg-d016lum9gjehc73erf4k4g-a
+DB_PORT=5432
+DB_NAME=kanban_db_zror
+DB_USER=user123
+DB_PASSWORD=KJZr4tLSDVJUU5e6dhJdkDFVTftONzC3
+JWT_SECRET_KEY=secretkey
